# labor_costs

./: .cursorrules  .gitignore  README.md  docker-compose.test.yml  docker-compose.yaml  env.template  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 009e879dd3a3_create_tables.py  9b69cb7c71d3_create_table.py  9e712399eead_initial_migration.py
app/: database.py  main.py
app/activity_types/: dao.py  models.py  router.py
app/admin_user/: __init__.py  bootstrap.py
app/auth/: __init__.py  auth.py  auth2.0.py  auth_2.py  router.py  schemas.py
app/config/: config.py
app/dao/: activity_type.py  base.py  division.py  organization.py  project.py  task.py  user.py
app/dependencies/: user.py
app/devisions/: models.py
app/divisions/: dao.py  models.py  router.py  schemas.py
app/groups/: dao.py  models.py  router.py
app/migrations/: env.py
app/models/: __init__.py  activity_type.py  base.py  division.py  organisation.py  organization.py  project.py  task.py  user.py
app/organisations/: models.py  router.py  schemes.py
app/organizations/: dao.py  models.py  router.py  schemes.py
app/pages/: router.py
app/projects/: dao.py  models.py  router.py  schemas.py
app/routers/: activity_type.py  auth.py  division.py  organization.py  project.py  task.py  user.py
app/schemes/: activity_type.py  division.py  organization.py  project.py  task.py  (+1 more)
auxiliry_files/: labor_coasts_2025-09-23T09_45_59.704Z.sql
migrations/: env.py
src/: main.py
test/: test_config.py
tests/: README.md  conftest.py  test_config_db_connection.py
(+61 files in other folders)
